# h3-java

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  allclasses-index.html  allpackages-index.html  appveyor.yml  build.gradle  constant-values.html  deprecated-list.html  element-list  gradle.properties  h3version.properties  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  pom.xml  serialized-form.html  settings.gradle  type-search-index.js
.github/workflows/: release.yml  slack-alert.yml  tests.yml  website.yml
com/uber/h3core/: AreaUnit.html  H3Core.html  H3CoreLoader.OperatingSystem.html  H3CoreLoader.html  H3CoreV3.html  LengthUnit.html  PolygonToCellsFlags.html  package-summary.html  package-tree.html  package-use.html
com/uber/h3core/class-use/: AreaUnit.html  H3Core.html  H3CoreLoader.OperatingSystem.html  H3CoreLoader.html  H3CoreV3.html  LengthUnit.html  PolygonToCellsFlags.html
com/uber/h3core/exceptions/: H3Exception.html  package-summary.html  package-tree.html  package-use.html
com/uber/h3core/exceptions/class-use/: H3Exception.html
com/uber/h3core/util/: CoordIJ.html  LatLng.html  package-summary.html  package-tree.html  package-use.html
com/uber/h3core/util/class-use/: CoordIJ.html  LatLng.html
docs/: DEVELOPERS-README.md  build-windows.md  library-build.md  migrating-from-v3.md  releasing.md  versioning.md
gradle/: libs.versions.toml
src/main/c/h3-java/: CMakeLists.txt  build-h3-docker.sh  build-h3-windows.ps1  build-h3-windows.sh  build-h3.sh  pull-from-github.sh
src/main/c/h3-java/cmake/: toolchain.cmake
src/main/c/h3-java/src/: jniapi.c
src/main/java/com/uber/h3core/: AreaUnit.java  H3Core.java  H3CoreLoader.java  H3CoreV3.java  LengthUnit.java  NativeMethods.java  PolygonToCellsFlags.java
src/main/java/com/uber/h3core/exceptions/: DistanceUndefinedException.java  H3Exception.java  LineUndefinedException.java  LocalIjUndefinedException.java  PentagonEncounteredException.java
src/main/java/com/uber/h3core/util/: CoordIJ.java  GeoCoord.java  H3Static.java  LatLng.java  Vector2D.java
src/test/java/com/uber/h3core/: BaseTestH3Core.java  TestBindingCompleteness.java  TestDirectedEdges.java  TestH3Core.java  TestH3CoreCrossCompile.java  TestH3CoreFactory.java  TestH3CoreLoader.java  TestH3CoreLoaderLocale.java  TestH3CoreSystemInstance.java  TestHierarchy.java  TestIndexing.java  TestInspection.java  TestMiscellaneous.java  TestNativeMethods.java  TestRegion.java  TestTraversal.java  TestUnidirectionalEdges.java  TestVertex.java
src/test/java/com/uber/h3core/benchmarking/: CellsToLinkedMultiPolygonBenchmark.java  CellsToMultiPolygonBenchmark.java  GridDiskBenchmark.java  H3CoreBenchmark.java  H3ParentChildBenchmark.java  H3SetToMultiPolygonBenchmark.java  KRingBenchmark.java  PolyfillBenchmark.java  PolygonToCellsBenchmark.java
src/test/java/com/uber/h3core/exceptions/: TestH3Exception.java
src/test/java/com/uber/h3core/util/: TestCoordIJ.java  TestGeoCoord.java  TestLatLng.java  TestVector2D.java
src/test/java/com/uber/h3core/v3/: BaseTestH3CoreV3.java  TestDirectedEdges.java  TestH3CoreV3SystemInstance.java  TestHierarchy.java  TestIndexing.java  TestInspection.java  TestMiscellaneous.java  TestRegion.java  TestTraversal.java
